# backendpy

./: .gitignore  CODEOWNERS  LICENSE  README.md  setup.cfg
.github/: CODEOWNERS
backendpy/: __init__.py  app.py  asgi.py  config.py  configuration.py  db.py  error.py  errors.py  exception.py  hook.py  initialization.py  initializer.py  logging.py  middleware.py  request.py  response.py  router.py  templating.py  unittest.py
backendpy/cli/: admin.py
backendpy/data_handler/: data.py  fields.py  filters.py  validators.py
backendpy/helpers/: file.py
backendpy/middleware/: middleware.py  processor.py
backendpy/middleware/defaults/: cors.py
backendpy/response/: exception.py  formatted.py  response.py
backendpy/utils/: bytes.py  file.py  http.py  json.py
docs/: api.rst  application_structure.rst  apps.rst  cli.rst  conf.py  configurations.rst  data_handlers.rst  database.rst  deployment.rst  environments.rst  exceptions.rst  hooks.rst  index.rst  initialization_scripts.rst  installation.rst  introduction.rst  logging.rst  management.rst  middlewares.rst  predefined_errors.rst  project_creation.rst  projects.rst  requests.rst  responses.rst  routes.rst  run.rst  templates.rst  testing.rst
docs/locale/fa/LC_MESSAGES/: api.po  application_structure.po  apps.po  cli.po  configurations.po  data_handlers.po  database.po  deployment.po  environments.po  exceptions.po  hooks.po  index.po  initialization_scripts.po  installation.po  introduction.po  logging.po  management.po  middlewares.po  run.po  (+8 more)
tests/integration/: test_integration.py
tests/unit/: test_unit.py
(+12 files in other folders)
