[metadata]
name = backendpy
version = 0.1.9a1
author = Savang Co.
author_email = backendpy@savang.com
description = Async (ASGI) Python web framework
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Backendpy, Web, Framework, Python, Async, ASGI
license = BSD 3-Clause License
url = https://github.com/savangco/backendpy
project_urls =
    Bug Tracker = https://github.com/savangco/backendpy/issues
    Documentation = https://backendpy.readthedocs.io
    Source Code = https://github.com/savangco/backendpy
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiofiles >= 0.8.0

[options.entry_points]
console_scripts =
    backendpy = backendpy.cli.admin:main

[options.extras_require]
full = ujson>=5.1.0; asyncpg>=0.25.0; SQLAlchemy>=1.4.31; jinja2>=3.0.3; Pillow>=9.0.0; aiohttp>=3.8.1; requests>=2.27.1
